--- a/carnivalrowzero.htm
+++ b/carnivalrowzero.htm
@@ -5,7 +5,7 @@
 <div class="grid-tabs">
     <button title="Character" name="act_tab_character" type="action">character</button>
     <button data-i18n="city" name="act_tab_city" title="City" type="action">city</button>
-    <img alt="Carnival Row Zero" src="https://raw.githubusercontent.com/yasashiitora/roll20-character-sheets/master/Carnival%20Row%20Zero/images/logo.jpg">
+    <img alt="Carnival Row Zero" src="https://raw.githubusercontent.com/yasashiitora/roll20-character-sheets/master/Carnival-Row-MY0/images/logo.jpg">
     <button data-i18n="zone-log" name="act_tab_log" title="Log" type="action">Zone Log</button>
     <button data-i18n="npc" name="act_tab_npc" title="NPC" type="action">npc</button>
 </div>
